fix(header): Align event date location center and fix em styling

--- a/frontend/src/styles/assembly/components/top_bar.scss
+++ b/frontend/src/styles/assembly/components/top_bar.scss
@@ -113,12 +113,13 @@
     }
 
     .date-location {
+      text-align: center;
       color: #fff;
       font-weight: 600;
       font-family: 'Open Sans';
-      font-style: italic;
+      /* font-style: italic; */
       font-size: 10px;
-      text-transform: uppercase;
+      /* text-transform: uppercase; */
     }
   }
 
