--- a/frontend/src/styles/assembly/site/style.scss
+++ b/frontend/src/styles/assembly/site/style.scss
@@ -63,7 +63,6 @@ hr {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Open Sans', Arial, Verdana, Tahoma;
-/*  text-transform: uppercase;*/
   font-weight: 800;
 }
 
@@ -87,6 +86,10 @@ h4 {
 
 strong {
   font-weight: 700;
+}
+
+em {
+  font-style: italic;
 }
 
 cite {
